--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     //mongo
     compile 'org.mongodb:mongo-java-driver:2.12.3'
+    compile 'org.springframework.data:spring-data-mongodb:1.9.5.RELEASE'
 }
