--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'org.springframework.security:spring-security-web:4.1.3.RELEASE'
     compile 'org.springframework.security:spring-security-config:4.1.3.RELEASE'
 
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
     compile "javax.servlet:jstl:1.2"
 
     //mongo
