--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     //mongo
     compile 'org.mongodb:mongo-java-driver:2.12.3'
     compile 'org.springframework.data:spring-data-mongodb:1.9.5.RELEASE'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.2'
 }
