--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
     compile "javax.servlet:jstl:1.2"
-
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
     //mongo
     compile 'org.mongodb:mongo-java-driver:2.12.3'
     compile 'org.springframework.data:spring-data-mongodb:1.9.5.RELEASE'
