--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'org.mongodb:mongo-java-driver:2.12.3'
     compile 'org.springframework.data:spring-data-mongodb:1.9.5.RELEASE'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.2'
+
+    // https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
+    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.4'
 }
