--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.2'
 
     // https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
-    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.4'
+//    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.4'
 }
