--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     compile 'org.springframework.data:spring-data-mongodb:1.9.5.RELEASE'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.2'
 
+    //email
+    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
+    compile group: 'org.springframework', name: 'spring-context-support', version: '4.3.6.RELEASE'
+
     // https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
 //    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.4'
 }
