--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ repositories {
 
 }
 
+test {
+    useJUnit()
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -21,6 +25,11 @@ dependencies {
     compile "org.springframework:spring-webmvc:4.3.3.RELEASE"
     compile "org.springframework:spring-web:4.3.3.RELEASE"
     compile "org.springframework:spring-context:4.3.3.RELEASE"
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.3.RELEASE'
+
+
     //spring security
     compile 'org.springframework.security:spring-security-web:4.1.3.RELEASE'
     compile 'org.springframework.security:spring-security-config:4.1.3.RELEASE'
